--- a/style.html
+++ b/style.html
@@ -420,14 +420,14 @@
 		<div class="content-block__elem    ">
 			<h4 class="content-block__heading">Постраничная навигация</h4>
 <div class="pagination-panel__block">
-	<ol class="pagination-panel__list    ">			
-		<li class="pagination-panel__item  is--prev  is--nav    ">
-	<a href="#" class="pagination-panel__link  is--prev  is--nav    ">
-		<svg class="icon-svg icon-pagin-prev" role="img">
-			<use xlink:href="/img/svg/sprite.svg#pagin-prev"></use>
-		</svg>
-	</a>
-</li>		
+	<ol class="pagination-panel__list    ">
+		<li class="pagination-panel__item  is--pagin  is--prev">
+	<a href="##" class="btn-nav__item  is--pagin  is--prev">
+	<span class="btn-nav__icon  is--pagin  is--prev"><svg class="icon-svg icon-icon-prev" role="img">
+	<use xlink:href="/img/svg/sprite.svg#icon-prev"></use>
+</svg></span>
+</a>
+</li>			
 		<li class="pagination-panel__item    ">
 	<a href="#" class="pagination-panel__link    "><span>1 </span></a>
 </li>
@@ -445,14 +445,14 @@
 </li>		
 		<li class="pagination-panel__item    ">
 	<a href="#" class="pagination-panel__link    "><span>10</span></a>
-</li>		
-		<li class="pagination-panel__item  is--next  is--nav    ">
-	<a href="#" class="pagination-panel__link  is--next  is--nav    ">
-		<svg class="icon-svg icon-pagin-next" role="img">
-			<use xlink:href="/img/svg/sprite.svg#pagin-next"></use>
-		</svg>
-	</a>
-</li>		
+</li>			
+		<li class="pagination-panel__item  is--pagin  is--next">
+	<a href="##" class="btn-nav__item  is--pagin  is--next">
+	<span class="btn-nav__icon  is--pagin  is--next"><svg class="icon-svg icon-icon-next" role="img">
+	<use xlink:href="/img/svg/sprite.svg#icon-next"></use>
+</svg></span>
+</a>
+</li>	
 	</ol>
 </div> 
 		</div>
