--- a/src/block/site/default/pagination/item-nav.html
+++ b/src/block/site/default/pagination/item-nav.html
@@ -1,7 +1,10 @@
 <li class="{{pagin_prefix}}item  {{pagin_mod}}">
-	<a href="#" class="{{pagin_prefix}}link  {{pagin_mod}}">
-		<svg class="icon-svg icon-{{pagin_icon}}" role="img">
-			<use xlink:href="{{url-path-img}}/svg/sprite.svg#{{pagin_icon}}"></use>
-		</svg>
-	</a>
+	[[azbntple 
+		tpl="/src/block/site/default/button/link-icon.html"
+		button_prefix="btn-nav__" 
+		button_mod="{{pagin_mod}}" 
+		button_link="##"
+		button_name="{{pagin_name}}" 
+		button_icon="{{pagin_icon}}"
+	]]
 </li>
