--- a/price.html
+++ b/price.html
@@ -371,9 +371,9 @@ document.createElement("picture");
 				<div class="form__item  is--agreement        ">
 	<input type="hidden" name="f[Согласие на обработку персональных данных]" value="Да">
 	<div class="form__text        ">		
-		Нажимая на кнопку «Отправить заявку» вы соглашаетесть с правилами обработки <a href='/agreement.html' target='_blank'>персональных данных</a>
+		Нажимая на кнопку «Отправить заявку», Вы соглашаетесь с правилами обработки <a href='/agreement.html' target='_blank'>персональных данных</a>
 	</div>	
-</div>	
+</div>		
 			</div>
 			<div class="cols form__cols      is--btn">
 				<button type="submit" class="btn__item    ">
@@ -423,9 +423,9 @@ document.createElement("picture");
 				<div class="form__item  is--agreement        ">
 	<input type="hidden" name="f[Согласие на обработку персональных данных]" value="Да">
 	<div class="form__text        ">		
-		Нажимая на кнопку «Отправить» вы соглашаетесть с правилами обработки <a href='/agreement.html' target='_blank'>персональных данных</a>
+		Нажимая на кнопку «Отправить», Вы соглашаетесь с правилами обработки <a href='/agreement.html' target='_blank'>персональных данных</a>
 	</div>	
-</div>	
+</div>		
 			</div>
 			<div class="cols form__cols      is--btn">
 				<button type="submit" class="btn__item    ">
