--- a/reviews.html
+++ b/reviews.html
@@ -177,13 +177,10 @@
 </div>
 			</div>
 			<div class="cols form__cols  is--reviews  is--agreement">
-				<div class="form__item  is--switch  is--reviews    ">
-	<div class="form__switch  is--reviews    ">
-		<input class="form__switch-input validate[required]  is--reviews        " id="fsrev[agreement]" name="f[Согласие на обработку персональных данных]" type="checkbox"  checked/>
-		<label for="fsrev[agreement]" class="form__switch-label    is--reviews        "></label> 
-		<label for="fsrev[agreement]" class="form__switch-text    is--reviews        "> 
-			Я согласен на обработку <a href='/agreement.html' target='_blank'>персональных данных</a>
-		</label>
+				<div class="form__item  is--agreement  is--reviews    ">
+	<input type="hidden" name="f[Согласие на обработку персональных данных]" value="Да">
+	<div class="form__text  is--reviews    ">		
+		Нажимая на кнопку «Отправить», Вы соглашаетесь с правилами обработки <a href='/agreement.html' target='_blank'>персональных данных</a>
 	</div>	
 </div>	
 			</div>
@@ -322,9 +319,9 @@ document.createElement("picture");
 				<div class="form__item  is--agreement        ">
 	<input type="hidden" name="f[Согласие на обработку персональных данных]" value="Да">
 	<div class="form__text        ">		
-		Нажимая на кнопку «Отправить заявку» вы соглашаетесть с правилами обработки <a href='/agreement.html' target='_blank'>персональных данных</a>
+		Нажимая на кнопку «Отправить заявку», Вы соглашаетесь с правилами обработки <a href='/agreement.html' target='_blank'>персональных данных</a>
 	</div>	
-</div>	
+</div>		
 			</div>
 			<div class="cols form__cols      is--btn">
 				<button type="submit" class="btn__item    ">
@@ -374,9 +371,9 @@ document.createElement("picture");
 				<div class="form__item  is--agreement        ">
 	<input type="hidden" name="f[Согласие на обработку персональных данных]" value="Да">
 	<div class="form__text        ">		
-		Нажимая на кнопку «Отправить» вы соглашаетесть с правилами обработки <a href='/agreement.html' target='_blank'>персональных данных</a>
+		Нажимая на кнопку «Отправить», Вы соглашаетесь с правилами обработки <a href='/agreement.html' target='_blank'>персональных данных</a>
 	</div>	
-</div>	
+</div>		
 			</div>
 			<div class="cols form__cols      is--btn">
 				<button type="submit" class="btn__item    ">
