--- a/index.html
+++ b/index.html
@@ -393,9 +393,9 @@
 				<div class="form__item  is--agreement  is--calc    ">
 	<input type="hidden" name="f[Согласие на обработку персональных данных]" value="Да">
 	<div class="form__text  is--calc    ">		
-		Нажимая на кнопку «Отправить» вы соглашаетесть с правилами обработки <a href='/agreement.html' target='_blank'>персональных данных</a>
+		Нажимая на кнопку «Отправить», Вы соглашаетесь с правилами обработки <a href='/agreement.html' target='_blank'>персональных данных</a>
 	</div>	
-</div>	
+</div>		
 			</div>
 			<div class="cols form__cols  is--calc  is--btn">
 				<button type="submit" class="btn__item  is--sm  is--block">
@@ -568,9 +568,9 @@ document.createElement("picture");
 				<div class="form__item  is--agreement        ">
 	<input type="hidden" name="f[Согласие на обработку персональных данных]" value="Да">
 	<div class="form__text        ">		
-		Нажимая на кнопку «Отправить заявку» вы соглашаетесть с правилами обработки <a href='/agreement.html' target='_blank'>персональных данных</a>
+		Нажимая на кнопку «Отправить заявку», Вы соглашаетесь с правилами обработки <a href='/agreement.html' target='_blank'>персональных данных</a>
 	</div>	
-</div>	
+</div>		
 			</div>
 			<div class="cols form__cols      is--btn">
 				<button type="submit" class="btn__item    ">
@@ -620,9 +620,9 @@ document.createElement("picture");
 				<div class="form__item  is--agreement        ">
 	<input type="hidden" name="f[Согласие на обработку персональных данных]" value="Да">
 	<div class="form__text        ">		
-		Нажимая на кнопку «Отправить» вы соглашаетесть с правилами обработки <a href='/agreement.html' target='_blank'>персональных данных</a>
+		Нажимая на кнопку «Отправить», Вы соглашаетесь с правилами обработки <a href='/agreement.html' target='_blank'>персональных данных</a>
 	</div>	
-</div>	
+</div>		
 			</div>
 			<div class="cols form__cols      is--btn">
 				<button type="submit" class="btn__item    ">
